test solution on github pages

--- a/pages/header.html
+++ b/pages/header.html
@@ -1,6 +1,6 @@
 <header>
     <div id="header">
-        <img src="../images/logo-index.png" alt="Web Logo" class="header-logo" id="header-logo">
+        <img src="" alt="Web Logo" class="header-logo" id="header-logo">
         <span class="nombre" id="header-nombre">Pol<br>Fernández Fernández</span>
         <button id="menu-toggle">&#9776;</button>
     </div>
