--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -1,26 +1,26 @@
 <nav id="sidebar">
     <div id="sidebar-header">
-        <img src="../images/logo.png" alt="Web Logo" class="sidebar-logo" id="sidebar-logo">
+        <img src="" alt="Web Logo" class="sidebar-logo" id="sidebar-logo">
         <button id="close-sidebar" class="close-btn">&times;</button>
     </div>
-    <a href="../index.html">Inicio</a>
+    <a id="sidebar-inicio" href="#">Inicio</a>
     <hr class="separador">
-    <a href="../pages/about-me.html">Sobre mí</a>
+    <a id="sidebar-about" href="#">Sobre mí</a>
     <div class="sidebar-submenu">
         <div class="sidebar-row">
-            <a href="../pages/studies.html">Estudios</a>
+            <a id="sidebar-studies" href="#">Estudios</a>
             <button class="submenu-toggle" aria-label="Desplegar submenú">&#9654;</button>
         </div>
         <div class="submenu">
-            <a href="../pages/double-bachelors.html">Doble Titulación (Aeros + Telecos)</a>
-            <a href="../pages/aeroespace.html">Ingeniería Aeroespacial</a>
-            <a href="../pages/telecommunitacions.html">Ingeniería en Telecomunicaciones</a>
-            <a href="../pages/background.html">Background</a>
+            <a id="sidebar-double-bachelors" href="#">Doble Titulación (Aeros + Telecos)</a>
+            <a id="sidebar-aeroespace" href="#">Ingeniería Aeroespacial</a>
+            <a id="sidebar-telecommunitacions" href="#">Ingeniería en Telecomunicaciones</a>
+            <a id="sidebar-background" href="#">Background</a>
         </div>
     </div>
-    <a href="../pages/experience.html">Experiencia</a>
-    <a href="../pages/projects.html">Proyectos</a>
-    <a href="../pages/contact.html">Contacto</a>
+    <a id="sidebar-experience" href="#">Experiencia</a>
+    <a id="sidebar-projects" href="#">Proyectos</a>
+    <a id="sidebar-contact" href="#">Contacto</a>
     <hr class="separador">
     <a href="#catalan">Catalán</a>
     <a href="#ingles">Inglés</a>
