--- a/pages/footer.html
+++ b/pages/footer.html
@@ -2,18 +2,18 @@
   <div class="footer-row">
     <div class="footer-left">
         <div>&copy; 2025<br>Pol Fernández Fernández</div>
-        <a href="../pages/attributions.html">Atribuciones</a>
+        <a id="footer-attributions" href="#">Atribuciones</a>
     </div>
     <div class="footer-center">
-        <img src="../images/logo-index.png" alt="Logo Satelite" class="footer-icon">
+        <img id="footer-logo-index" src="" alt="Logo Satelite" class="footer-icon">
         <span class="dot">·</span>
-        <img src="../images/logo-aeros.png" alt="Logo Aeros" class="footer-icon">
+        <img id="footer-logo-aeros" src="" alt="Logo Aeros" class="footer-icon">
         <span class="dot">·</span>
-        <img src="../images/logo-telecos.png" alt="Logo Telecos" class="footer-icon">
+        <img id="footer-logo-telecos" src="" alt="Logo Telecos" class="footer-icon">
     </div>
     <div class="footer-right">
-        <a href="../pages/contact.html">Contacto</a>
-        <a href="../pages/about-me.html">Sobre mí</a>
+        <a id="footer-contact" href="#">Contacto</a>
+        <a id="footer-about" href="#">Sobre mí</a>
         <a href="#" class="scroll-top-link" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;">
             Volver arriba
         </a>
