about-me/readme/license update

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,10 +16,10 @@
     <!-- Poner enlaces a los repositorios de GitHub donde están los proyectos -->
     <section class="projects-list">
         <div class="project-card">
-            <div class="project-content">
+            <div class="project-content" onclick="window.open('https://github.com/fernandezfernandezpol/portfolio-website', '_blank')" aria-label="Abrir Portfolio Website en GitHub">
                 <img src="../images/pagina-web.png" alt="Logo página web" class="project-logo">
                 <div class="project-details">
-                    <span class="project-name">Portfolio Profesional - Web</span>
+                    <span class="project-name">Portfolio Website</span>
                     <div class="project-badges">
                         <div class="project-badge">
                             <img src="../images/html.png" alt="HTML" class="badge-logo">
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="project-content">
+            <div class="project-content" onclick="window.open('https://github.com/fernandezfernandezpol/matlab-gui-musical-note-detector', '_blank')" aria-label="Abrir MATLAB GUI Musical Note Detector en GitHub">
                 <img src="../images/matlab-gui.png" alt="Logo página web" class="project-logo">
                 <div class="project-details">
                     <span class="project-name">MATLAB GUI Musical Note Detector</span>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="project-card">
-            <div class="project-content">
+            <div class="project-content" onclick="window.open('https://github.com/fernandezfernandezpol/python-embedded-web-chat-analyzer', '_blank')" aria-label="Abrir Python Embedded Website Chat Analyzer en GitHub">
                 <img src="../images/python-web.png" alt="Logo página web con python" class="project-logo">
                 <div class="project-details">
                     <span class="project-name">Python embedded website chat analyzer</span>
