--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,22 +1,33 @@
 <footer class="footer">
   <div class="footer-row">
     <div class="footer-left">
-        <div>&copy; 2025 <br>Pol Fernández Fernández</div>
-        <a id="footer-attributions" href="#">Atribuciones</a>
+      <div>
+        <span class="footer-author">Pol Fernández Fernández</span><br>
+        <span class="footer-copyright-year">&copy; 2025 All rights reserved</span>
+      </div>
+      <a id="footer-attributions" href="#">Atribuciones</a>
     </div>
     <div class="footer-center">
-        <img id="footer-logo-index" src="" alt="Logo Satelite" class="footer-icon">
-        <span class="dot">·</span>
-        <img id="footer-logo-aeros" src="" alt="Logo Aeros" class="footer-icon">
-        <span class="dot">·</span>
-        <img id="footer-logo-telecos" src="" alt="Logo Telecos" class="footer-icon">
+      <img id="footer-logo-index" src="" alt="Logo Satelite" class="footer-icon">
+      <span class="dot">·</span>
+      <img id="footer-logo-aeros" src="" alt="Logo Aeros" class="footer-icon">
+      <span class="dot">·</span>
+      <img id="footer-logo-telecos" src="" alt="Logo Telecos" class="footer-icon">
     </div>
     <div class="footer-right">
-        <a id="footer-contact" href="#">Contacto</a>
-        <a id="footer-about" href="#">Sobre mí</a>
-        <a href="#" class="scroll-top-link" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;">
-            Volver arriba
-        </a>
+      <a id="footer-contact" href="#">Contacto</a>
+      <a id="footer-about" href="#">Sobre mí</a>
+      <a href="#" class="scroll-top-link" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;">
+        Volver arriba
+      </a>
     </div>
+  </div>
+  <div class="footer-copyright">
+    <hr class="footer-divider">
+    <span>
+      All images in this website, except where otherwise indicated, are original works created by Pol Fernández Fernández and are protected by copyright.
+      <br>
+      You may not use, reproduce, or distribute these images without explicit permission from the author.
+    </span>
   </div>
 </footer>
