language switch added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="icon" type="image/x-icon" href="./images/logo-index.ico">
     <link rel="icon" type="image/png" href="./images/logo-index.png">
-    <title>Pol Fernández Fernández</title>
+    <title data-i18n="title">Pol Fernández Fernández</title>
 </head>
 <body>
     <div id="include-header"></div>
@@ -15,27 +15,27 @@
         <div class="carousel-track">
             <div class="carousel-slide">
                 <a href="./pages/about-me.html" aria-label="Ir a Sobre Mí"><img src="./images/sobre-mi.jpg" alt="Sobre Mí"></a>
-                <span class="carousel-caption">Sobre Mí</span>
+                <span class="carousel-caption" data-i18n="carousel.about">Sobre Mí</span>
             </div>
             <div class="carousel-slide">
                 <a href="./pages/aeroespace.html" aria-label="Ir a Ingeniería Aeroespacial"><img src="./images/aeros.jpg" alt="Ingeniería Aeroespacial"></a>
-                <span class="carousel-caption">Ingeniería Aeroespacial</span>
+                <span class="carousel-caption" data-i18n="carousel.aerospace">Ingeniería Aeroespacial</span>
             </div>
             <div class="carousel-slide">
                 <a href="./pages/telecommunitacions.html" aria-label="Ir a Ingeniería en Telecomunicaciones"><img src="./images/telecos.jpg" alt="Ingeniería en Telecomunicaciones"></a>
-                <span class="carousel-caption">Ingeniería en Telecomunicaciones</span>
+                <span class="carousel-caption" data-i18n="carousel.telecom">Ingeniería en Telecomunicaciones</span>
             </div>
             <div class="carousel-slide">
                 <a href="./pages/experience.html" aria-label="Ir a Experiencia"><img src="./images/experiencia.jpg" alt="Experiencia"></a>
-                <span class="carousel-caption">Experiencia</span>
+                <span class="carousel-caption" data-i18n="carousel.experience">Experiencia</span>
             </div>
             <div class="carousel-slide">
                 <a href="./pages/projects.html" aria-label="Ir a Proyectos"><img src="./images/proyectos.jpg" alt="Proyectos"></a>
-                <span class="carousel-caption">Proyectos</span>
+                <span class="carousel-caption" data-i18n="carousel.projects">Proyectos</span>
             </div>
             <div class="carousel-slide">
                 <a href="./pages/contact.html" aria-label="Ir a Contacto"><img src="./images/contacto.jpg" alt="Contacto"></a>
-                <span class="carousel-caption">Contacto</span>
+                <span class="carousel-caption" data-i18n="carousel.contact">Contacto</span>
             </div>
         </div>
         <button class="carousel-btn prev" aria-label="Anterior">&#10094;</button>
@@ -43,24 +43,24 @@
         <div class="carousel-indicators"></div>
     </div>
     <div class="separator-title">
-        <h2>Echa un vistazo a mi trabajo:</h2>
+        <h2 data-i18n="main.workTitle">Echa un vistazo a mi trabajo:</h2>
     </div>
     <div class="main-buttons">
         <button id="visitar-github" class="main-btn" onclick="window.open('https://github.com/fernandezfernandezpol', '_blank')" aria-label="Abrir perfil de GitHub en una nueva pestaña">
             <img src="./images/github.png" alt="GitHub" class="btn-icon" title="linkedin icons > Linkedin icons created by riajulislam - Flaticon">
-            <span>Perfil&nbsp;de GitHub</span>
+            <span data-i18n="main.githubProfile">Perfil de&nbsp;GitHub</span>
         </button>
         <button id="visitar-linkedin" class="main-btn" onclick="window.open('https://www.linkedin.com/in/pol-fernández-fernández-39b14b222', '_blank')" aria-label="Abrir perfil de LinkedIn en una nueva pestaña">
             <img src="./images/linkedin.png" alt="LinkedIn" class="btn-icon" title="github icons > Github icons created by riajulislam - Flaticon">
-            <span>Perfil de LinkedIn</span>
+            <span data-i18n="main.linkedinProfile">Perfil de LinkedIn</span>
         </button>
         <button id="descargar-cv" class="main-btn" aria-label="Descargar Curriculum Vitae">
             <img src="./images/curriculum-vitae.png" alt="Curriculum Vitae" class="btn-icon" title="curriculum icons > Curriculum icons created by Freepik - Flaticon">
-            <span>Descargar CV</span>
+            <span data-i18n="main.downloadCV">Descargar CV</span>
         </button>
     </div>
     <div class="separator-title">
-        <h2>Ve un resumen de mi perfil:</h2>
+        <h2 data-i18n="main.summaryTitle">Ve un resumen de mi perfil:</h2>
         <div class="video-container">
             <!-- Cambiar el vídeo por uno de presentación y resumen -->
             <iframe width="560" height="315" 
