--- a/pages/aerospace.html
+++ b/pages/aerospace.html
@@ -6,19 +6,18 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
     <link rel="icon" type="image/png" href="../images/logo-index.png">
-    <title>Ingeniería en Telecomunicaciones</title>
+    <title data-i18n="title">Ingeniería Aeroespacial</title>
 </head>
 <body>
     <div id="include-header"></div>
     <div class="page-title">
-        <h1>Ingeniería en Telecomunicaciones</h1>
+        <h1 data-i18n="title">Ingeniería Aeroespacial</h1>
     </div>
     <div class="separator-title">
-        <h2>Vídeo promocional del Grado en Telecomunicaciones:</h2>
+        <h2 data-i18n="videoTitle">Vídeo promocional del Grado en Ingeniería Aeroespacial:</h2>
         <div class="video-container">
-            <!-- Cuando añada cambiar el idioma no olvidar cambiar los enlaces de vídeo al del idioma correspondiente -->
             <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/_tBT3Ansk-k" 
+                src="https://www.youtube.com/embed/49akM52EyRc"
                 title="YouTube video player" 
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
