--- a/pages/background.html
+++ b/pages/background.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
     <link rel="icon" type="image/png" href="../images/logo-index.png">
-    <title>Background</title>
+    <title data-i18n="title">Background</title>
 </head>
 <body>
     <div id="include-header"></div>
     <div class="page-title">
-        <h1>Background</h1>
+        <h1 data-i18n="title">Background</h1>
     </div>
     <div id="include-sidebar"></div>
     <div id="include-footer"></div>
