--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,43 +6,43 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
     <link rel="icon" type="image/png" href="../images/logo-index.png">
-    <title>Contacto</title>
+    <title data-i18n="title">Contacto</title>
 </head>
 <body>
     <div id="include-header"></div>
     <div class="page-title">
-        <h1>Contacto</h1>
+        <h1 data-i18n="title">Contacto</h1>
     </div>
     <div class="vertical-buttons">
         <div class="button-row">
             <button class="main-btn contact">
                 <img src="../images/gmail.png" alt="Gmail" class="btn-icon">
             </button>
-            <span class="button-label">Email:<br>fernandezfernandezpol@gmail.com</span>
+            <span class="button-label" data-i18n="email-label">Email:<br>fernandezfernandezpol@gmail.com</span>
         </div>
         <div class="button-row">
             <button id="show-contact-form" class="main-btn contact">
                 <img src="../images/phone.png" alt="Phone" class="btn-icon">
             </button>
-            <span class="button-label">Número de teléfono:<br>Rellena el formulario de contacto</span>
+            <span class="button-label" data-i18n="phone-label">Número de teléfono:<br>Rellena el formulario de contacto</span>
         </div>
         <div class="button-row">
             <button id="visitar-linkedin" class="main-btn contact" onclick="window.open('https://www.linkedin.com/in/pol-fernández-fernández-39b14b222', '_blank')">
                 <img src="../images/linkedin.png" alt="LinkedIn" class="btn-icon">
             </button>
-            <span class="button-label">LinkedIn:<br>Pol Fernández Fernández</span>
+            <span class="button-label" data-i18n="linkedin-label">LinkedIn:<br>Pol Fernández Fernández</span>
         </div>
         <div class="button-row">
             <button id="visitar-github" class="main-btn contact" onclick="window.open('https://github.com/fernandezfernandezpol', '_blank')">
                 <img src="../images/github.png" alt="GitHub" class="btn-icon">
             </button>
-            <span class="button-label">Github:<br>@fernandezfernandezpol</span>
+            <span class="button-label" data-i18n="github-label">Github:<br>@fernandezfernandezpol</span>
         </div>
         <div class="button-row">
             <button class="main-btn contact" onclick="window.open('https://www.youtube.com/@fernandezfernandezpol', '_blank')">
                 <img src="../images/youtube.png" alt="Youtube" class="btn-icon">
             </button>
-            <span class="button-label">Youtube:<br>@fernandezfernandezpol</span>
+            <span class="button-label" data-i18n="youtube-label">Youtube:<br>@fernandezfernandezpol</span>
         </div>
     </div>
     <div id="include-sidebar"></div>
