--- a/pages/footer.html
+++ b/pages/footer.html
@@ -2,10 +2,10 @@
   <div class="footer-row">
     <div class="footer-left">
       <div>
-        <span class="footer-author">Pol Fernández Fernández</span><br>
-        <span class="footer-copyright-year">&copy; 2025 All rights reserved</span>
+        <span class="footer-author" data-i18n="footer.author">Pol Fernández Fernández</span><br>
+        <span class="footer-copyright-year" data-i18n="footer.copyright">&copy; 2025 All rights reserved</span>
       </div>
-      <a id="footer-attributions" href="#">Atribuciones</a>
+      <a id="footer-attributions" href="#" data-i18n="footer.attributions">Atribuciones</a>
     </div>
     <div class="footer-center">
       <img id="footer-logo-index" src="" alt="Logo Satelite" class="footer-icon">
@@ -15,16 +15,16 @@
       <img id="footer-logo-telecos" src="" alt="Logo Telecos" class="footer-icon">
     </div>
     <div class="footer-right">
-      <a id="footer-contact" href="#">Contacto</a>
-      <a id="footer-about" href="#">Sobre mí</a>
-      <a href="#" class="scroll-top-link" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;">
+      <a id="footer-contact" href="#" data-i18n="footer.contact">Contacto</a>
+      <a id="footer-about" href="#" data-i18n="footer.about">Sobre mí</a>
+      <a href="#" class="scroll-top-link" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;" data-i18n="footer.scrollTop">
         Volver arriba
       </a>
     </div>
   </div>
   <div class="footer-copyright">
     <hr class="footer-divider">
-    <span>
+    <span data-i18n="footer.imagesCopyright">
       All images in this website, except where otherwise indicated, are original works created by Pol Fernández Fernández and are protected by copyright.
       <br>
       You may not use, reproduce, or distribute these images without explicit permission from the author.
