--- a/pages/header.html
+++ b/pages/header.html
@@ -1,7 +1,7 @@
 <header>
     <div id="header">
-        <img src="" alt="Web Logo" class="header-logo" id="header-logo">
-        <span class="nombre" id="header-nombre">Pol<br>Fernández Fernández</span>
-        <button id="menu-toggle">&#9776;</button>
+        <img src="" alt="Web Logo" class="header-logo" id="header-logo" />
+        <span class="nombre" id="header-nombre" data-i18n="name">Pol<br>Fernández Fernández</span>
+        <button id="menu-toggle" aria-label="Toggle menu">&#9776;</button>
     </div>
 </header>
