--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -3,25 +3,24 @@
         <img src="" alt="Web Logo" class="sidebar-logo" id="sidebar-logo">
         <button id="close-sidebar" class="close-btn">&times;</button>
     </div>
-    <a id="sidebar-inicio" href="#">Inicio</a>
+    <a id="sidebar-inicio" href="#" data-i18n="sidebar.home">Inicio</a>
     <hr class="separador">
-    <a id="sidebar-about" href="#">Sobre mí</a>
+    <a id="sidebar-about" href="#" data-i18n="sidebar.about">Sobre mí</a>
     <div class="sidebar-submenu">
         <div class="sidebar-row">
-            <a id="sidebar-studies" href="#">Estudios</a>
+            <a id="sidebar-studies" href="#" data-i18n="sidebar.studies">Estudios</a>
             <button class="submenu-toggle" aria-label="Desplegar submenú">&#9654;</button>
         </div>
         <div class="submenu">
-            <a id="sidebar-double-bachelors" href="#">Doble Titulación (Aeros + Telecos)</a>
-            <a id="sidebar-aeroespace" href="#">Ingeniería Aeroespacial</a>
-            <a id="sidebar-telecommunitacions" href="#">Ingeniería en Telecomunicaciones</a>
-            <a id="sidebar-background" href="#">Background</a>
+            <a id="sidebar-double-bachelors" href="#" data-i18n="sidebar.doubleBachelors">Doble Titulación (Aeros + Telecos)</a>
+            <a id="sidebar-aeroespace" href="#" data-i18n="sidebar.aerospace">Ingeniería Aeroespacial</a>
+            <a id="sidebar-telecommunitacions" href="#" data-i18n="sidebar.telecom">Ingeniería en Telecomunicaciones</a>
+            <a id="sidebar-background" href="#" data-i18n="sidebar.background">Background</a>
         </div>
     </div>
-    <a id="sidebar-experience" href="#">Experiencia</a>
-    <a id="sidebar-projects" href="#">Proyectos</a>
-    <a id="sidebar-contact" href="#">Contacto</a>
+    <a id="sidebar-experience" href="#" data-i18n="sidebar.experience">Experiencia</a>
+    <a id="sidebar-projects" href="#" data-i18n="sidebar.projects">Proyectos</a>
+    <a id="sidebar-contact" href="#" data-i18n="sidebar.contact">Contacto</a>
     <hr class="separador">
-    <a href="#catalan">Catalán</a>
-    <a href="#ingles">Inglés</a>
+    <div id="lang-buttons-container"></div>
 </nav>
