--- a/pages/studies.html
+++ b/pages/studies.html
@@ -6,35 +6,40 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
     <link rel="icon" type="image/png" href="../images/logo-index.png">
-    <title>Estudios</title>
+    <title data-i18n="title">Estudios</title>
 </head>
 <body>
     <div id="include-header"></div>
     <div class="page-title">
-        <h1>Estudios</h1>
+        <h1 data-i18n="title">Estudios</h1>
     </div>
     <div class="vertical-buttons studies">
         <a href="../pages/double-bachelors.html">
             <button class="main-btn studies double-bachelors">
-                <span><span style="font-size:3rem;">Doble Titulación:</span>
-                <br><br>Ingeniería Aeroespacial<br>+<br>Ingeniería en Telecomunicaciones</span>
+                <span>
+                    <span style="font-size:3rem;" data-i18n="double-degree-title">Doble Titulación:</span>
+                    <br><br>
+                    <span data-i18n="degree-aero">Ingeniería Aeroespacial</span>
+                    <br>+<br>
+                    <span data-i18n="degree-telecom">Ingeniería en Telecomunicaciones</span>
+                </span>
             </button>
         </a>
         <div class="main-buttons">
-            <a href="../pages/aeroespace.html">
+            <a href="../pages/aerospace.html">
                 <button class="main-btn studies-2 aeros">
-                    <span>Ingeniería<br>Aeroespacial</span>
+                    <span data-i18n="degree-aero">Ingeniería<br>Aeroespacial</span>
                 </button>
             </a>
-            <a href="/pages/telecommunitacions.html">
+            <a href="/pages/telecommunications.html">
                 <button class="main-btn studies-2 telecos">
-                    <span>Ingeniería en Telecomunicaciones</span>
+                    <span data-i18n="degree-telecom">Ingeniería en Telecomunicaciones</span>
                 </button>
             </a>
         </div>
         <a href="../pages/background.html">
             <button class="main-btn studies background">
-                <span>Background</span>
+                <span data-i18n="background">Background</span>
             </button>
         </a>
     </div>
