--- a/pages/double-bachelors.html
+++ b/pages/double-bachelors.html
@@ -6,17 +6,16 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
     <link rel="icon" type="image/png" href="../images/logo-index.png">
-    <title>Doble Grado</title>
+    <title data-i18n="title">Doble Titulación</title>
 </head>
 <body>
     <div id="include-header"></div>
     <div class="page-title">
-        <h1>Doble Titulación (Aeros + Telecos)</h1>
+        <h1 data-i18n="heading">Doble Titulación (Aeros + Telecos)</h1>
     </div>
     <div class="separator-title">
-        <h2>Vídeo promocional de la Doble Titulación:</h2>
+        <h2 data-i18n="video-intro">Vídeo promocional de la Doble Titulación:</h2>
         <div class="video-container">
-            <!-- Cuando añada cambiar el idioma no olvidar cambiar los enlaces de vídeo al del idioma correspondiente -->
             <iframe width="560" height="315" 
                 src="https://www.youtube.com/embed/spYBItf0Eo8" 
                 title="YouTube video player" 
@@ -27,17 +26,17 @@
         </div>
     </div>
     <div class="separator-title">
-        <h2>Descubre un poco más de cada grado por separado:</h2>
+        <h2 data-i18n="more-info">Descubre un poco más de cada grado por separado:</h2>
     </div>
     <div class="main-buttons">
-        <a href="../pages/aeroespace.html">
+        <a href="../pages/aerospace.html">
             <button class="main-btn studies-2 aeros">
-                <span>Ingeniería<br>Aeroespacial</span>
+                <span data-i18n="aerospace">Ingeniería<br>Aeroespacial</span>
             </button>
         </a>
-        <a href="../pages/telecommunitacions.html">
+        <a href="../pages/telecommunications.html">
             <button class="main-btn studies-2 telecos">
-                <span>Ingeniería en Telecomunicaciones</span>
+                <span data-i18n="telecom">Ingeniería en Telecomunicaciones</span>
             </button>
         </a>
     </div>
