--- a/pages/experience.html
+++ b/pages/experience.html
@@ -6,12 +6,25 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
     <link rel="icon" type="image/png" href="../images/logo-index.png">
-    <title>Experiencia</title>
+    <title data-i18n="title">Experiencia</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <div id="include-header"></div>
     <div class="page-title">
-        <h1>Experiencia</h1>
+        <h1 data-i18n="title">Experiencia</h1>
+    </div>
+    <div class="company-card">
+        <div class="company-content">
+            <img src="../images/logo-nanosatlab.jpeg" alt="Miembro de Nanosat Lab - UPC" class="company-logo">
+            <div class="company-details">
+                <span class="company-name">Nanosat Lab - UPC</span>
+                <div class="company-time">Junio 2025 - Actualidad</div>
+            </div>
+        </div>
+        <div class="company-extra" data-md="../content/es/nanosatlab-es.md">
+            &#9662; <span data-i18n="click-to-expand">Pulsa para desplegar descripción</span> &#9662;
+        </div>
     </div>
     <div class="company-card">
         <div class="company-content">
@@ -21,12 +34,8 @@
                 <div class="company-time">Marzo 2021 - Junio 2025</div>
             </div>
         </div>
-        <div class="company-extra">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="company-extra" data-md="../content/es/profesor-particular-es.md">
+            &#9662; <span data-i18n="click-to-expand">Pulsa para desplegar descripción</span> &#9662;
         </div>
     </div>
     <div class="company-card">
@@ -37,12 +46,23 @@
                 <div class="company-time">Octubre 2023 - Enero 2024</div>
             </div>
         </div>
-        <div class="company-extra">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="company-extra" data-md="../content/es/mercadona-es.md">
+            &#9662; <span data-i18n="click-to-expand">Pulsa para desplegar descripción</span> &#9662;
+        </div>
+    </div>
+    <div class="separator-title">
+        <h2 data-i18n="organizations">Organizaciones:</h2>
+    </div>
+    <div class="company-card">
+        <div class="company-content">
+            <img src="../images/logo-euroavia.jpg" alt="Miembro de Euroavia Castelldefels" class="company-logo">
+            <div class="company-details">
+                <span class="company-name">Euroavia Castelldefels</span>
+                <div class="company-time">Septiembre 2024 - Actualidad</div>
+            </div>
+        </div>
+        <div class="company-extra" data-md="../content/es/euroavia-es.md">
+            &#9662; <span data-i18n="click-to-expand">Pulsa para desplegar descripción</span> &#9662;
         </div>
     </div>
     <div id="include-sidebar"></div>
